More spacing fixes

--- a/dev/web/css/main.css
+++ b/dev/web/css/main.css
@@ -532,7 +532,7 @@ body,
     border-radius: 10px;
 }
 
-.masthead {
+.about .masthead {
     margin: 0;
     font-weight: 400;
 }
